--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
 									</ul>
 								</div>
 							</li> -->
-                        <li><a href="Page-1.html">Introduction</a>
+                        <li><a href="gerontology.html">Biology of Aging</a>
                             <ul class="submenu">
-                                <li><a href="gerontology.html">Biology of Aging</a></li>
                                 <li><a href="aging_definition.html">What Is Aging?</a></li>
                                 <li><a href="aging_animals.html">Some Animals Age, Others May Not</a></li>
                                 <li><a href="comparative_biology.html">Comparative Biology of Aging</a></li>
@@ -811,7 +810,7 @@
 					<a href="https://genomics.senescence.info" class="hmitem">Human Ageing Genomic Resources
 					</a>, a series of tools and databases aimed at understanding the genetic basis of human aging.
 				</p>
-				<a href="https://genomics.senescence.info/"><img src="images/hagr_logo.png" data-image-width="1024" data-image-height="140">
+				<a href="https://genomics.senescence.info/"><img src="images/hagr_logo.png" width="75%" height="auto">
 				</a>
 				<ul class="normaltext" style="PADDING-LEFT: 30px">
 					<li>
