--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
 					<a href="https://genomics.senescence.info" class="hmitem">Human Ageing Genomic Resources
 					</a>, a series of tools and databases aimed at understanding the genetic basis of human aging.
 				</p>
-				<a href="https://genomics.senescence.info/"><img src="images/hagr_logo.png" width="75%" height="auto">
+				<a href="https://genomics.senescence.info/"><img src="images/hagr_logo.png" class="responsive-image" alt="HAGR Logo">
 				</a>
 				<ul class="normaltext" style="PADDING-LEFT: 30px">
 					<li>
