--- a/index.html
+++ b/index.html
@@ -927,5 +927,11 @@
 			    </a>. All rights reserved.
 		    </p>
 	    </footer>
+        <script>
+            // Toggle the menu when the hamburger icon is clicked
+            document.querySelector('.hamburger').addEventListener('click', function() {
+                document.querySelector('.navbar').classList.toggle('active');
+            });
+        </script>
     </body>
 </html>
