--- a/index.html
+++ b/index.html
@@ -933,5 +933,6 @@
                 document.querySelector('.navbar').classList.toggle('active');
             });
         </script>
-    </body>
+    	<script src="main.js" defer></script>
+	</body>
 </html>
